# MeatyMusic

./: .api_endpoints_summary.md  .gitignore  .implementation_checklist_sds_preview_007.md  .task_007_008_completion_report.md  ARTIST_NORMALIZATION_QUICK_REF.md  CLAUDE.md  COMPOSE_PHASE5_COMPLETE.md  CONFLICT_DETECTOR_QUICK_REF.md  DASHBOARD_CODE_EXAMPLES.md  DASHBOARD_INTEGRATION_CHECKLIST.md  DASHBOARD_INTEGRATION_SUMMARY.md  DASHBOARD_QUICK_REFERENCE.md  DASHBOARD_VISUAL_LAYOUT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_SDS-PREVIEW-002.md  P1.2_COMPLETION_SUMMARY.md  PHASE2_FILES_MANIFEST.md  PHASE2_MCP_INTEGRATION_SUMMARY.md  PHASE5_WAVE1A_COMPLETE.md  PHASE_2_STYLE_SKILL_DELIVERY.md  PHASE_3.2_PINNED_RETRIEVAL_DELIVERY.md  PHASE_3_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_4_POLICY_GUARDS_SUMMARY.md  PHASE_8_COMPLETE.md  PHASE_8_SUMMARY.md  PINNED_RETRIEVAL_QUICK_REFERENCE.md  RBAC_IMPLEMENTATION_SUMMARY.md  README.md  SDS_PREVIEW_ARCHITECTURE.md  TASKS_007_008_COMPLETE.md  TASKS_009-012_CHECKLIST.md  TASK_0.6_DELIVERY_SUMMARY.md  TASK_2.2_SUMMARY.md  TASK_3.3_ARTIST_NORMALIZATION_SUMMARY.md  TASK_3.4_SUMMARY.md  TASK_4.1_RUBRIC_SCORER_SUMMARY.md  TASK_4.2_4.3_SUMMARY.md  TASK_SDS-PREVIEW-001_VERIFICATION_REPORT.md  TASK_SDS-PREVIEW-007_IMPLEMENTATION_SUMMARY.md  TASK_SDS-PREVIEW-011_IMPLEMENTATION_SUMMARY.md  (+10 more)
services/api/: .dockerignore  .env.example  .env.test  .env.validation  Dockerfile  N6-2_IMPLEMENTATION_SUMMARY.md  P1.4_IMPLEMENTATION_SUMMARY.md  TASKS_004_005_IMPLEMENTATION_SUMMARY.md  alembic.ini  coverage.json  coverage_gaps_action_plan.md  coverage_report.md  demo_lyrics_generator.py  main.py  pyproject.toml  pytest.ini  run_citation_tests.py  test_determinism_standalone.py  test_profanity_direct.py  test_profanity_standalone.py  test_rubric_logic.py  validate_imports.py  validate_pii_detector.py  validate_profanity_filter.py  validate_rubric_scorer.py  validate_tasks_004_005.py
services/api/alembic/: env.py
services/api/app/: errors.py
services/api/docs/: SDS_EXPORT_ENDPOINT_IMPLEMENTATION.md  blueprint_seeder.md  default_generators_usage_guide.md  mcp_integration.md  pii_detector_implementation.md  workflow_events_usage.md  (+2 more)
(+1063 files in other folders)
